--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,3 @@
-# These are supported funding model platforms
-
 github: # shrekmp4
 patreon: Vainelifee
 open_collective: # Replace with a single Open Collective username
@@ -9,4 +7,5 @@ community_bridge: # Replace with a single Community Bridge project-name e.g., cl
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
-custom: # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
+custom: 
+  - https://www.paypal.com/paypalme/pandacompany
